--- a/Qindex.html
+++ b/Qindex.html
@@ -1,3 +1,4 @@
+
 <!--==========================================================================
   ░█▀▀█ ░░ ▒█▀▀█ █▀▀█ █▀▀█ █▀▀█ █▀▀ █▀▀█ █░░█ █▀▀█ █▀▀█ █░░█ 
   ▒█▄▄█ ▀▀ ▒█▄▄█ █▄▄█ █░░█ █▄▄█ ▀▀█ █░░█ █▄▄█ █▄▄▀ █░░█ █░░█ 
@@ -311,8 +312,7 @@ h3 {
           <a class="dropdown-toggle" data-toggle="dropdown" href="#">MORE
           <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="https://alexandroshub.github.io/plus.html">Plus</a></li>
-          </ul>
+            <li><a href="https://alexandroshub.github.io/plus.html">Plus</a></li>     </ul>
         </li>
       </ul>
     </div>
@@ -358,6 +358,15 @@ h3 {
   <h2>Personal website of Pᴀᴘᴀsᴘʏʀᴏᴜ Aʟᴇxᴀɴᴅʀᴏs.</h2> 
   <p>All about IoT, Automations, Robotics, projects with arduino or raspberryPi and more...</p> 
 
+
+<button type="button" class="btn btn-default active" data-toggle="collapse" data-target="#dexo">Γιατί AP ?</button>
+  <div id="dexo" class="collapse">
+  <b> Χαίρομαι που το ρωτάς!  </b>
+
+ Απ' το 2011 ασχολούμαι με την τεχνολογία και internet και από τους πρώτους μου  στόχους ήταν να υπάρχει ενας διαδικτυακός ιστότοπος  που να φιλοξενεί τις εργασίες και τις απόψεις μου,  και προφανώς η πρόσβαση να είναι ελεύθερη!  Αυτή τη στιγμή είστε στην 3η έκδοση  της τέταρτης προσπάθειας  αυτού του στόχου μου!
+  </div>  
+  
+  
 </div>
 
 
@@ -366,7 +375,7 @@ h3 {
   <h3 style="text-align:center;">Καλωσόρισες</h3>
  
  
-<p>Είναι η προσωπική ιστοσελίδα του Αλέξανδρου Παπασπύρου. Εδώ μπορείς να βρεις πολλά γύρω από τους <span class="w3-tag w3-small w3-orange"><a style="text-decoration: none;" onclick="window.location.href='https://alexandroshub.github.io/automation';"><b><i class="fas fa-cog"></i> Aυτοματισμούς</b></a></span> τη <span class="w3-tag w3-small w3-black"><a style="text-decoration: none;" onclick="window.location.href='https://alexandroshub.github.io/soon';"><b><i class="fas fa-robot"></i> Ρομποτική </b></a></span> το <span class="w3-tag w3-small w3-white"><a style="text-decoration: none;" onclick="window.location.href='https://alexandroshub.github.io/iot';"><b><i class="fas fa-network-wired"></i> IoT</b></a></span>  και να βρεις project με <span class="w3-tag w3-small w3-blue"><a style="text-decoration: none;" onclick="window.location.href='https://alexandroshub.github.io/arduino';"><b><i class="fas fa-infinity"></i> Arduino</b></a></span> και <span class="w3-tag w3-small w3-red"><a style="text-decoration: none;" onclick="window.location.href='https://alexandroshub.github.io/raspberrypi';"><b><i class="fab fa-raspberry-pi"></i> Raspberry Pi</b></a></span> και εφαρμογές <span class="w3-tag w3-small w3-purple"><a style="text-decoration: none;" onclick="window.location.href='https://alexandroshub.github.io/codingzone';"><b><i class="fas fa-code"></i> Προγραμματισμού</b></a></span> αλλά και οδηγούς και περιεχόμενο ψυχαγωγίας και ενημέρωσης σε θέματα γύρω από τη τεχνολογία. Μπορείς να ψάξεις για οτι αλλο θελεις!</p>
+<p>Είναι η προσωπική ιστοσελίδα του Αλέξανδρου Παπασπύρου. Εδώ μπορείς να βρεις πολλά γύρω από τους <span class="w3-tag w3-small w3-orange"><a style="text-decoration: none;" onclick="window.location.href='https://alexandroshub.github.io/automation';"><b><i class="fas fa-cog"></i> Aυτοματισμούς</b></a></span> τη <span class="w3-tag w3-small w3-black"><a style="text-decoration: none;" onclick="window.location.href='https://alexandroshub.github.io/soon';"><b><i class="fas fa-robot"></i> Ρομποτική </b></a></span> το <span class="w3-tag w3-small w3-white"><a style="text-decoration: none;" onclick="window.location.href='https://alexandroshub.github.io/iot';"><b><i class="fas fa-network-wired"></i> IoT</b></a></span>  και να βρεις project με <span class="w3-tag w3-small w3-blue"><a style="text-decoration: none;" onclick="window.location.href='https://alexandroshub.github.io/arduino';"><b><i class="fas fa-infinity"></i> Arduino</b></a></span>και <span class="w3-tag w3-small w3-red"><a style="text-decoration: none;" onclick="window.location.href='https://alexandroshub.github.io/raspberrypi';"><b><i class="fab fa-raspberry-pi"></i> Raspberry Pi</b></a></span> και εφαρμογές <span class="w3-tag w3-small w3-purple"><a style="text-decoration: none;" onclick="window.location.href='https://alexandroshub.github.io/codingzone';"><b><i class="fas fa-code"></i> Προγραμματισμού</b></a></span> αλλά και οδηγούς και περιεχόμενο ψυχαγωγίας και ενημέρωσης σε θέματα γύρω από τη τεχνολογία. Μπορείς να ψάξεις για οτι αλλο θελεις!</p>
 
  <div id="search"></div>
 <script async src="https://cse.google.com/cse.js?cx=da9cf2b4ec807d8de" ></script>
@@ -392,34 +401,29 @@ h3 {
       <li class="list-group-item">under construction <span class="badge">3</span></li> 
     </ul>
  
- 
-   <br> <button onclick="window.location.href='https://alexandroshub.github.io/portfolio2021'"   class="btn pull-center">Personal Projects Portfolio
-</button> 
-<button onclick="window.location.href='https://alexandroshub.github.io/dev'"   class="btn pull-center">dev Projects
-</button> 
-
    <div class="w3-center w3-padding-16" style="background-color: #2D2D30; ;" id="port">
   
   
     <div class="w3-row-padding">
 <!-- 1 -->
- <a href="#LightSwich"><div class="w3-col l3 m6 w3-margin-bottom" onclick="document.getElementById('lista1').style.display='block'"><div class="w3-display-container"><div class="w3-display-topleft w3-padding" style="background-colorpadding: 45px 16px: rgba(8, 12, 18, 0.7); color: #72c494; padding: 45px 16px;" id="auto"><strong>LightSwich</strong></div><img src="https://c2.staticflickr.com/3/2817/32706842880_b828022e51_o.png" alt="Developing" style="width: 100%;"  class="w3-hover-opacity"/> </a>
+ <a href="https://alexandroshub.github.io/portfolio2021#LightSwich"><div class="w3-col l3 m6 w3-margin-bottom" onclick="document.getElementById('lista1').style.display='block'"><div class="w3-display-container"><div class="w3-display-topleft w3-padding" style="background-color: rgba(8, 12, 18, 0.7); color: #2FABCF; padding: 45px 16px;" id="auto"><strong>LightSwich</strong></div>
+<img src="https://c2.staticflickr.com/3/2817/32706842880_b828022e51_o.png" alt="Developing" style="width: 100%;"  class="w3-hover-opacity"/> </a>
 <a href="https://alexandroshub.github.io/automation"><div class="w3-display-bottomleft w3-black w3-padding" onclick="alrtFunction()">Automation</div></a>
 </div></div>
 <!-- 2 -->
-<a href="https://alexandroshub.github.io/cono"><div class="w3-col l3 m6 w3-margin-bottom"><div class="w3-display-container" onclick="document.getElementById('lista2').style.display='block'"><div class="w3-display-topleft w3-padding" style="background-color: rgba(8, 12, 18, 0.7); color: #72c494; padding: 45px 16px;" id="auto"><strong>CoNo</strong></div>
+<a href="https://alexandroshub.github.io/cono"><div class="w3-col l3 m6 w3-margin-bottom"><div class="w3-display-container" onclick="document.getElementById('lista2').style.display='block'"><div class="w3-display-topleft w3-padding" style="background-color: rgba(8, 12, 18, 0.7); color: #2FABCF; padding: 45px 16px;" id="auto"><strong>CoNo</strong></div>
 <img src="https://c2.staticflickr.com//3/2795/33046870276_99da24ee4b_o.png" alt="IoT" style="width: 100%;"  class="w3-hover-opacity"/></a>
 <a href="https://alexandroshub.github.io/iot"><div class="w3-display-bottomleft w3-black w3-padding" onclick="al2tFunction()">IoT</div></a>
 </div></div>
 <!-- 3 -->
-<a href="#MICHATRON"><div class="w3-col l3 m6"><div class="w3-display-container" onclick="document.getElementById('lista3').style.display='block'">
-<div class="w3-display-topleft w3-padding" style="background-color: rgba(8, 12, 18, 0.7); color: #72c494; padding: 45px 16px;" id="auto"><strong>Michatron</strong></div>
+<a href="https://alexandroshub.github.io/portfolio2021#MICHATRON"><div class="w3-col l3 m6"><div class="w3-display-container" onclick="document.getElementById('lista3').style.display='block'">
+<div class="w3-display-topleft w3-padding" style="background-color: rgba(8, 12, 18, 0.7); color: #2FABCF; padding: 45px 16px;" id="auto"><strong>Michatron</strong></div>
 <img src="https://c2.staticflickr.com/4/3813/32932633412_c084fcfbf4_o.png" alt="Michatron" style="width: 100%;" onclick="onClick(this)" class="w3-hover-opacity"/></a>
 <div class="w3-display-bottomleft w3-black w3-padding" onclick="al2tFunction()">Robotics</div>
 </div></div>
 <!-- 4 -->
-<a href="#pcevol"><div class="w3-col l3 m6"><div class="w3-display-container" onclick="document.getElementById('lista4').style.display='block'">
-<div class="w3-display-topleft w3-padding" style="background-color: rgba(8, 12, 18, 0.7); color: #72c494; padding: 45px 16px;" id="auto"><strong>PC evolution</strong></div>
+<a href="https://alexandroshub.github.io/portfolio2021#pcevol"><div class="w3-col l3 m6"><div class="w3-display-container" onclick="document.getElementById('lista4').style.display='block'">
+<div class="w3-display-topleft w3-padding" style="background-color: rgba(8, 12, 18, 0.7); color: #2FABCF; padding: 45px 16px;" id="auto"><strong>PC evolution</strong></div>
 <img src="https://c2.staticflickr.com/1/572/32932636012_c6413d21b5_o.png" alt="Files" style="width: 100%;" onclick="onClick(this)" class="w3-hover-opacity"/></a>
 <div class="w3-display-bottomleft w3-black w3-padding" onclick="alrtFunction()">Publications</div>
 </div></div>
@@ -429,17 +433,23 @@ h3 {
  
  
  
- 
- 
+ <center>
+   <button type="button" onclick="window.location.href='https://alexandroshub.github.io/portfolio2021'" class="btn btn-info active">Personal Projects Portfolio</button>
+  <button type="button"  onclick="window.location.href='https://alexandroshub.github.io/dev'" class="btn btn-default active">dev Projects</button>
+  
+  
+<button type="button" class="btn btn-default active" data-toggle="collapse" data-target="#demo">under construction <span class="badge">7</span></button>
+  <div id="demo" class="collapse">
+  <b>Νέα συναρπαστικά projects έρχονται σύντομα!</b> Αυτή τη περίοδο μελετάω για τα Bitcoin, το blockchain, εφαρμογές ΙοΤ & automation, και προγραμματισμό σε διάφορες γλώσσες αλλά και για ότι νεότερο υπάρχει γύρω τεχνολογία, αλλά ακούω και διαλέξεις  γύρω από διάφορα φιλοσοφικά ζητήματα. 
+  </div>  
+ </center>
   </div>
 </div>
-
-
-
 
 <div style="color: #777;background-color:white;text-align:center;padding:50px 80px;text-align: justify;">
  
   <h3 class="text-center">AP +</h3>  
+   
   <ul class="nav nav-tabs">
     <li class="active"><a data-toggle="tab" href="#home">+ Blog</a></li>
     <li><a data-toggle="tab" href="#menu1">+ Podcast</a></li>
@@ -471,6 +481,7 @@ h3 {
       <h2>OTR POSTS</h2>
       <p>soon...</p>
     </div>
+     <br>   <button type="button" onclick="window.location.href='https://alexandroshub.github.io/plus'" class="btn btn-info active">Plus</button><br>
   </div>
 
   </div>
@@ -493,23 +504,18 @@ h3 {
     
       <p><span class="glyphicon glyphicon-map-marker"></span>Athens, GR</p>
       <p><span class="glyphicon glyphicon-phone"></span><a href="tel:+306940548867">Phone: +30 6940548867</a></p>
-      <p><span class="glyphicon glyphicon-envelope"></span> <a href="mailto:alexandroshub@protonmail.com?Subject=Web%20Email" target="_top"> Email: alexandroshub@protonmail.com</p>
+      <p><span class="glyphicon glyphicon-envelope"></span> <a href="mailto:alexandroshub@protonmail.com?Subject=Web%20Email" target="_top"> alexandroshub@protonmail.com</p>
       <p><i class="fa fa-comments-o"></i><a href="https://discord.gg/WAnYJjD">Chat on Discord</a></p>
               <button onclick="window.location.href='https://alexandroshub.github.io/contact'"   class="btn pull-left">Contact</button>
-<br></div>
-    
-
+<br></div>    
   </div>
-
-
-  </div>
+ </div>
 </div>
 
 <!--
 ▄▀█ █░░ █▀█ █░█ ▄▀█   █▀█ █
 █▀█ █▄▄ █▀▀ █▀█ █▀█   █▀▀ █
 -->
-<!-- Image of location/map -->
 <img src="https://live.staticflickr.com/5670/22216562610_61c1f6febe_c.jpg" class="img-responsive" style="width:100%">
 
 
