--- a/enjoyplus.html
+++ b/enjoyplus.html
@@ -1,6 +1,4 @@
-
-
-<!-- SpecialPage version v.alien2 + icon
+<!-- SpecialPage ᖰ𝘭υ⟆
 
   ░█▀▀█ ░░ ▒█▀▀█ █▀▀█ █▀▀█ █▀▀█ █▀▀ █▀▀█ █░░█ █▀▀█ █▀▀█ █░░█ 
   ▒█▄▄█ ▀▀ ▒█▄▄█ █▄▄█ █░░█ █▄▄█ ▀▀█ █░░█ █▄▄█ █▄▄▀ █░░█ █░░█ 
@@ -80,10 +78,14 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
   </header>
 
     <marquee behavior="scroll" direction="left">
-    <span class="w3-tag" style="background-color: #BD1D1F; color: #D1D3D8;"> <b>EVENTS</b> </span><a href="https://www.mwc.gr/"style="text-decoration: none" target="_blank" class="w3-hover-text-blue"> 5G MOBILE & CONNECTED WORLD CONFERENCE 2021 23 & 24 Ιουνίου 2021</a> 
+    <span class="w3-tag" style="background-color: #BD1D1F; color: #D1D3D8;"> <b>EVENTS</b> </span>
+    
+    <!--
+    <a href="https://www.mwc.gr/"style="text-decoration: none" target="_blank" class="w3-hover-text-blue"> 5G MOBILE & CONNECTED WORLD CONFERENCE 2021 23 & 24 Ιουνίου 2021</a> 
     |
    <a href="https://resources.kariera.gr/events/developers-days-digital/"style="text-decoration: none" target="_blank" class="w3-hover-text-blue">
 Developers:Day:Digital 24 & 25 Ιουνίου 2021</a>
+-->
 	<span class="w3-tag" style="background-color: #4B759B; color: #D1D3D8;">Το AlexandrosHUB προτείνει eBooks: </span> <a href="https://docs.google.com/file/d/0B-6_L8q1CAqiVFFtU096LUlTblU/edit">Ο Μεγάλος Αδερφός 1984 του George Orwell </a> και <a href="https://docs.google.com/file/d/0B-6_L8q1CAqiaXRscG5HVTFhMlU/edit">Ο Θαυμαστός Καινούργιος Κόσμος του Aldous Huxley</a>
   </marquee>
  
