--- a/Qindex.html
+++ b/Qindex.html
@@ -1,4 +1,3 @@
-
 <!--==========================================================================
   ░█▀▀█ ░░ ▒█▀▀█ █▀▀█ █▀▀█ █▀▀█ █▀▀ █▀▀█ █░░█ █▀▀█ █▀▀█ █░░█ 
   ▒█▄▄█ ▀▀ ▒█▄▄█ █▄▄█ █░░█ █▄▄█ ▀▀█ █░░█ █▄▄█ █▄▄▀ █░░█ █░░█ 
@@ -8,7 +7,7 @@
       ▞▚ ▙▄ ▛ █▬█ ▞▚  ▛ █ 
       
       
-      Updated: v2.1 May21
+      Updated: v2.1 12July21
       Website: https://alexandroshub.github.io
       Contact: 	a-papaspyrou@outlook.com.gr
       CC-BY international 4 2011-2021 Alexandros Papaspyrou
@@ -226,7 +225,7 @@ body, html {
 
 .bgimg-2 {
   background-image: url("https://c2.staticflickr.com/4/3813/32932633412_c084fcfbf4_o.png");
-  min-height: 300px;
+  min-height: 200px;
    -webkit-filter: grayscale(70%);
     filter: grayscale(70%); /* make all photos black and white */ 
 }
@@ -395,11 +394,12 @@ h3 {
 
 <div style="position:relative;">
   <div style="color:#ddd;background-color:#282E34;text-align:center;padding:50px 80px;text-align: justify;">
-     <p class="text-center">Development & Automation Projects</p>
+ <!--    <p class="text-center">Development & Automation Projects</p>
     <ul class="list-group">
       <li class="list-group-item">CoNo <span class="label label-danger">NEW iot project!</span></li>
       <li class="list-group-item">under construction <span class="badge">3</span></li> 
     </ul>
+    -->
  
    <div class="w3-center w3-padding-16" style="background-color: #2D2D30; ;" id="port">
   
@@ -479,7 +479,18 @@ h3 {
     </div>
     <div id="menu2" class="tab-pane fade">
       <h2>OTR POSTS</h2>
-      <p>soon...</p>
+      <button type = ".myButton" type = "submit" name = "ap" value = "ap" onclick="window.location.href='https://ap-otr.tumblr.com/'">
+<p>need a pass!</p><img src="https://66.media.tumblr.com/9f91f0dbdfacf1b392ea57952b64b007/5c25108e88c20a16-06/s500x750/e4c92b25ff82c66650a9593cc1c7e43a06570b50.png" alt="AP logo" style="width:60px;height:60px;"></button>
+
+ 
+<style>
+.hidee {display: none;}
+.myDIVa:hover + .hidee {display: block;  color: blue;}
+</style>
+
+<div class="myDIVa">need help?</div>
+<div class="hidee">Τι βλέπεις μεσα στο logo?</div>
+
     </div>
      <br>   <button type="button" onclick="window.location.href='https://alexandroshub.github.io/plus'" class="btn btn-info active">Plus</button><br>
   </div>
