--- a/contcard.html
+++ b/contcard.html
@@ -1,17 +1,22 @@
+<!-- SpecialPage contact v.alien2
+ud 3.2.21
 
-
-
- <title>Papaspyrou | Contact</title>
+░█▀▀█ ░░ ▒█▀▀█ █▀▀█ █▀▀█ █▀▀█ █▀▀ █▀▀█ █░░█ █▀▀█ █▀▀█ █░░█ 
+▒█▄▄█ ▀▀ ▒█▄▄█ █▄▄█ █░░█ █▄▄█ ▀▀█ █░░█ █▄▄█ █▄▄▀ █░░█ █░░█ 
+▒█░▒█ ░░ ▒█░░░ ▀░░▀ █▀▀▀ ▀░░▀ ▀▀▀ █▀▀▀ ▄▄▄█ ▀░▀▀ ▀▀▀▀ ░▀▀▀ 
+Welcome in my personal website 100% HTML Hosted by Github
+Handcrafted With ❤ (CC)-By: Alexandros Papaspyrou
+-->
+<!DOCTYPE html>
+<html>
+  <title>Papaspyrou | Contact</title>
   <link rel="icon" href="https://78.media.tumblr.com/1a28f3759c3dcb54570d754893844188/tumblr_p2qvm8VJG21si59zfo1_400.png" type="image/png" />
-  
-<meta charset="UTF-8">
+  <meta charset="UTF-8" />
   
 <link rel="apple-touch-icon" type="image/png" href="https://cpwebassets.codepen.io/assets/favicon/apple-touch-icon-5ae1a0698dcc2402e9712f7d01ed509a57814f994c660df9f7a952f3060705ee.png" />
 <meta name="apple-mobile-web-app-title" content="CodePen">
 
-<link rel="shortcut icon" type="image/x-icon" href="https://cpwebassets.codepen.io/assets/favicon/favicon-aec34940fbc1a6e787974dcd360f2c6b63348d4b1f4e06c77743096d55480f33.ico" />
 
-<link rel="mask-icon" type="" href="https://cpwebassets.codepen.io/assets/favicon/logo-pin-8f3771b1072e3c38bd662872f6b673a722f4b3ca2421637d5596661b4e2132cc.svg" color="#111" />
 
   
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
@@ -194,6 +199,7 @@ code, .card .line-numbers {
  
  
       <div class="indent"> <span class="property">contact</span><span class="operator">: </span><span>{</span>
+       <div class="indent"> <span class="property">media</span><span class="operator">: </span><span class="string">'@<a href="https://mastodon.social/@alphapi">alphapi</a>'</span><span>,</span></div>
       <div class="indent"> <span class="property">media</span><span class="operator">: </span><span class="string">'@alexandroshub'</span><span>,</span></div>
         <div class="indent"> <span class="property">email</span><span class="operator">: </span><span class="string">'alexandroshub@protonmail.com'</span><span>,</span></div>
           <div class="indent"> <span class="property">email</span><span class="operator">: </span><span class="string">'alexandroshub@tuta.io
@@ -263,5 +269,6 @@ code, .card .line-numbers {
           </a>
           
 -->
+
 
 
