--- a/contact.html
+++ b/contact.html
@@ -9,6 +9,9 @@ Handcrafted With ❤ (CC)-By: Alexandros Papaspyrou
 -->
 <!DOCTYPE html>
 <html>
+         <meta http-equiv="Refresh" content="2;url=https://alexandroshub.github.io/Qindex">
+
+  
   <title>Papaspyrou | Contact</title>
   <link rel="icon" href="https://78.media.tumblr.com/1a28f3759c3dcb54570d754893844188/tumblr_p2qvm8VJG21si59zfo1_400.png" type="image/png" />
   <meta charset="UTF-8" />
