--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@ Handcrafted With ❤ (CC)-By: Alexandros Papaspyrou
 -->
 <!DOCTYPE html>
 <html>
-         <meta http-equiv="Refresh" content="2;url=https://alexandroshub.github.io/Qindex">
+         <meta http-equiv="Refresh" content="2;url=https://alexandroshub.github.io/contcard">
 
   
   <title>Papaspyrou | Contact</title>
