--- a/enjoyplus.html
+++ b/enjoyplus.html
@@ -1,4 +1,3 @@
-
 <!-- SpecialPage ᖰ𝘭υ⟆
 
   ░█▀▀█ ░░ ▒█▀▀█ █▀▀█ █▀▀█ █▀▀█ █▀▀ █▀▀█ █░░█ █▀▀█ █▀▀█ █░░█ 
@@ -159,6 +158,7 @@ footer.navigation:hover h4 {
 }
 </style>
 
+       <a href="https://alexandroshub.github.io/"> <span class="w3-button w3-top w3-black w3-xxlarge w3-text-grey w3-hover-text-red" style="width:auto;right:0;"><i class="fa fa-home"></i></span></a>
 
   
   <header class="info">
@@ -409,6 +409,36 @@ Are You Lost In The World Like Me</p>
 <a href="http://www.eka.org.gr/ ">eka</a>  | 
 <a href="https://www.setip.gr/ ">setip</a>  | 
 <a href="https://www.radicalit.gr/">radicalit</a>  | 
+<a href="http://rocinante.gr/category/kladikes/kladiki-pliroforikis-tilepikinonion/">rocinante</a> 
+
+<br><span class="w3-tag w3-black"> anarch-antifa </span>
+<a href="https://autonomeantifa.gr/">autonomeantifa</a>  | 
+<a href="https://www.sarajevomag.net/">sarajevomag</a>  | 
+<a href="https://antifacommunity.gr/">antifacommunity</a>  | <a href="https://www.antifascistaction-west.gr/">antifascistaction</a>   | 
+<a href="https://www.anarxeio.gr/">anarxeio</a>  | 
+<a href="https://www.antinews.gr">antinews</a>  | 
+<a href="https://syneleysikatoikwnvkp.espivblogs.net/">syneleysikatoikwnvkp</a>  | 
+<a href="https://viomecoop.com/">viomecoop</a>  | 
+<a href="https://www.solidarity4all.gr/el">solidarity4all</a>  | 
+<a href="https://skya.espiv.net/">skya</a>  | 
+
+
+<!--  
+https://athens.indymedia.org/
+https://autonomeantifa77.wordpress.com/
+https://syneleysikatoikwnvkp.squat.gr/ 
+https://realdemocracygr.wordpress.com/
+http://anoixtisyneleysiagparaskevis.blogspot.com/
+http://politestouvirona.blogspot.com/
+https://sveod.gr/
+http://deltioaket.blogspot.com/2014/02/blog-post.html
+http://protovoulia-agona.blogspot.com/?m=0
+http://protovouliakatoikwnkaisarianis.blogspot.com/
+
+https://athens.indymedia.org/author/%CE%A3%CF%85%CE%BD%CE%AD%CE%BB%CE%B5%CF%85%CF%83%CE%B7%20%CE%BA%CE%B1%CF%84%CE%BF%CE%AF%CE%BA%CF%89%CE%BD%20%CE%92%CF%8D%CF%81%CF%89%CE%BD%CE%B1,%20%CE%9A%CE%B1%CE%B9%CF%83%CE%B1%CF%81%CE%B9%CE%B1%CE%BD%CE%AE%CF%82,%20%CE%A0%CE%B1%CE%B3%CE%BA%CF%81%CE%B1%CF%84%CE%AF%CE%BF%CF%85
+
+-->
+
 <br><span class="w3-tag w3-black"> οικολογία </span>
 <a href="https://www.facebook.com/remattiki/">ΡεμΑττική</a>  | 
 <a href="https://supportearth.gr/">supportearth</a>  | 
@@ -416,8 +446,6 @@ Are You Lost In The World Like Me</p>
 <a href="https://ath-stop-mining.blogspot.com/">Πρωτοβουλία ενάντια στις εξορύξεις υδρογονανθράκων</a>  | 
  <br>       
 </div>
-
-
 
 <button class="accordion2">BETTER YOU
 </button>
