--- a/dev.html
+++ b/dev.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
   <title>Papaspyrou | Development</title>
@@ -152,35 +153,44 @@ img:hover {filter: none;-webkit-filter: grayscale(0); -webkit-transform: scale(1
     <img src="https://ih1.redbubble.net/image.229207699.0716/st,small,507x507-pad,600x600,f8f8f8.u1.jpg" alt="Paris" width="100" height="100">
     
      <img src="https://ih1.redbubble.net/image.326251165.4658/st,small,507x507-pad,600x600,f8f8f8.u4.jpg" alt="Paris" width="100" height="100">
+     
+   <img src="https://ih1.redbubble.net/image.270426643.3373/st,small,507x507-pad,600x600,f8f8f8.u4.jpg" alt="Paris" width="80" height="80">    
+
+<!--
+
+Java
+Javascript
+PHP
+React
+Swift
+
+*
+Ανάπτυξη διαδικτυακών εφαρμογών (Web Development) με χρήση Python.
+Δημιουργία δυναμικών ιστοσελίδων με χρήση Python στο BackEnd
+Δημιουργία εφαρμογών με Arduino.
+Χρήσιμες εφαρμογές που μπορούμε να υλοποιήσουμε στο σπίτι μας, με χρήση συσκευής Arduino
+Ανάπτυξη ιστοσελίδων με το Wordpress.
+Δημιουργία δυναμικών ιστοσελίδων με χρήση Wordpress, του πιο διαδεδομένου εργαλείου διαχείρισης περιεχομένου.
+Εισαγωγή στο Machine Learning
+Μπαίνουμε στον κόσμο του Machine Learning, κατασκευάζοντας μικρά προγράμματα με χρήση βιβλιοθηκών της Python
+Εισαγωγή στην ανάπτυξη ANDROID εφαρμογών
+Εισαγωγή στη γλώσσα προγραμματισμού PHP
+Προχωρημένος προγραμματισμός με τη γλώσσα προγραμματισμού Java
+Εισαγωγή στις βάσεις δεδομένων με τη MySQL
+Εισαγωγή στις βάσεις δεδομένων με τη MongoDB
+Εισαγωγή στη γλώσσα προγραμματισμού R για εφαρμογές στατιστικής
+Θεωρία αλγορίθμων
+Data Science με Python
+Δημιουργία παραθυρικών εφαρμογών με PyQt
+Εισαγωγή στον προγραμματισμό με το Scratch
+Εισαγωγή στις βασικές έννοιες προγραμματισμού.
+Εισαγωγή στη χρήση υπολογιστών και στις εφαρμογές γραφείου.
+Σχεδιασμός Ιστοσελίδων με το Bootstrap
+*
+-->
  </div>
 
  </div>
-        <br>
-        <button class="accordion2">Πές την γνώμη σου!
-        </button>
-        <div class="panel">
-          <div id="disqus_thread"></div>
-          <script>
-            /**
-             *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
-             *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
-            /*
-            var disqus_config = function () {
-            this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
-            this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
-            };
-            */
-            (function () {
-              // DON'T EDIT BELOW THIS LINE
-              var d = document,
-                s = d.createElement("script");
-              s.src = "https://alexandroshub.disqus.com/embed.js";
-              s.setAttribute("data-timestamp", +new Date());
-              (d.head || d.body).appendChild(s);
-            })();
-          </script>
-          <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-        </div>
         <br>
       </div>
       <script>
@@ -210,7 +220,7 @@ img:hover {filter: none;-webkit-filter: grayscale(0); -webkit-transform: scale(1
   <a href="#APtop" title="To Top">
     <span class="glyphicon glyphicon-chevron-up"></span>
   </a>
-  <p>Made By  <a href="https://alexandroshub.github.io/welcome21.html" target="_blank"title="Visit AlexandrosHub">AlexandrosHub</a></p>
+  <p>Handcrafted with <span>&#128420;</span> By  <a href="https://alexandroshub.github.io/welcome21.html" target="_blank"title="Visit AlexandrosHub">AlexandrosHub</a></p>
   
   <p   style="font-size: 9px; color:#9CA5AC">
         <link
