--- a/arduino.html
+++ b/arduino.html
@@ -16,6 +16,10 @@
 
   ==========================================================================
   -->
+
+       <meta http-equiv="Refresh" content="20;url=https://alexandroshub.github.io/ardu22.html">
+
+
 <!DOCTYPE html>
 <html>
 <title>Papaspyrou | Arduino</title>
