--- a/thnx.html
+++ b/thnx.html
@@ -1,6 +1,3 @@
-
-	
-
 <!--
 
 ░█▀▀█ ░░ ▒█▀▀█ █▀▀█ █▀▀█ █▀▀█ █▀▀ █▀▀█ █░░█ █▀▀█ █▀▀█ █░░█ 
@@ -28,31 +25,13 @@ Last Update: 21/4/2019-->
 body,h1,h5 {font-family: "Raleway", sans-serif}
 body, html {height: 100%}
 .bgimg {
-    background-image: url('https://cdn.pixabay.com/photo/2014/06/04/16/41/thank-you-362164_960_720.jpg');
+    background-image: url('https://i.pinimg.com/originals/c7/bc/02/c7bc02d9715ac4a5bee064292e5173f2.gif');
     min-height: 100%;
     background-position: center;
     background-size: cover;
 }
-.loader {
-  border: 16px solid #f3f3f3;
-  border-radius: 50%;
-  border-top: 16px solid black;
-  border-bottom: 16px solid black;
-  width: 120px;
-  height: 120px;
-  -webkit-animation: spin 2s linear infinite;
-  animation: spin 2s linear infinite;
-}
 
-@-webkit-keyframes spin {
-  0% { -webkit-transform: rotate(0deg); }
-  100% { -webkit-transform: rotate(360deg); }
-}
 
-@keyframes spin {
-  0% { transform: rotate(0deg); }
-  100% { transform: rotate(360deg); }
-}
 </style>
 <body>
 
@@ -62,7 +41,7 @@ body, html {height: 100%}
 <!-- <!--/////////////////////////////////////////////////// -->
 <script src="https://vendora.gr/js/vendor.js?id=2824da26de6f7691a1f9"></script>
                      
-<div><h1 class="title"><span>THNX</span>
+<div><h1 class="title"><span>Ooup...</span>
 <span id="typed-names"></span></h1></div>  
 
 <script defer>
