--- a/Qindex.html
+++ b/Qindex.html
@@ -7,7 +7,7 @@
       ▞▚ ▙▄ ▛ █▬█ ▞▚  ▛ █ 
       
       
-      Updated: v2.1 30Sept21
+      Updated: v2.1 20oct21
       Website: https://alexandroshub.github.io
       Contact: 	a-papaspyrou@outlook.com.gr
       CC-BY international 4 2011-2021 Alexandros Papaspyrou
@@ -300,7 +300,7 @@ h3 {
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>                        
       </button>
-      <a class="navbar-brand" href="#myPage"><b>AlphaPi</b></a>
+      <a class="navbar-brand" href="#myPage"><b>▞▚ ▛</b></a>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav navbar-right">
@@ -321,7 +321,10 @@ h3 {
 
 <div class="bgimg-1">
   <div class="caption">
-  <span class="border">▞▚ ▙▄ ▛ █▬█ ▞▚  ▛ █</span>
+  <span class="border">
+  WELCOME <!--   ▞▚ ▙▄ ▛ █▬█ ▞▚  ▛ █  -->
+  
+  </span>
   </div>
 </div>
 <style>
@@ -350,8 +353,6 @@ h3 {
 <div id="mySidenav" class="sidenav">
   <a href="https://alexandroshub.github.io/portfolio2021" id="xxcc">Projects </a>
 </div>
-    <div class="w3-display-bottomright">sept21</div>
-
 
 
 <div class="jumbotron text-center">
@@ -368,6 +369,108 @@ h3 {
   
   
 </div>
+
+
+
+
+
+
+
+<style>
+
+#myBtn {
+  display: none;
+  position: fixed;
+  bottom: 20px;
+  right: 30px;
+  z-index: 99;
+  font-size: 18px;
+  border: none;
+  outline: none;
+  background-color: #2D2D3080;
+  color: white;
+  cursor: pointer;
+  padding: 8px;
+  border-radius: 40px;
+}
+
+#myBtn:hover {
+  background-color: #2D2D30;
+}
+</style>
+
+<button onclick="topFunction()" id="myBtn" title="Go to top"><i style='font-size:18px' class='fas'>&#xf077;</i>
+</button>
+
+<script>
+//Get the button
+var mybutton = document.getElementById("myBtn");
+
+// When the user scrolls down 20px from the top of the document, show the button
+window.onscroll = function() {scrollFunction()};
+
+function scrollFunction() {
+  if (document.body.scrollTop > 500 || document.documentElement.scrollTop > 500) {
+    mybutton.style.display = "block";
+  } else {
+    mybutton.style.display = "none";
+  }
+}
+
+// When the user clicks on the button, scroll to the top of the document
+function topFunction() {
+  document.body.scrollTop = 0;
+  document.documentElement.scrollTop = 0;
+}
+</script>
+
+
+
+
+
+<!--
+
+
+
+
+
+<div class="w3-row-padding w3-center w3-margin-top">
+<div class="w3-third">
+  <div class="w3-card w3-container" style="min-height:460px">
+  <h3>Code</h3><br>
+  <i class="fa fa-desktop w3-margin-bottom w3-text-theme" style="font-size:120px"></i>
+  <p>Built-in responsiveness</p>
+  <p>Mobile first fluid grid</p>
+  <p>Fits any screen sizes</p>
+  <p>PC Tablet and Mobile</p>
+  </div>
+</div>
+
+<div class="w3-third">
+  <div class="w3-card w3-container" style="min-height:460px">
+  <h3>Make</h3><br>
+  <i class="fa fa-css3 w3-margin-bottom w3-text-theme" style="font-size:120px"></i>
+  <p>Standard CSS only</p>
+  <p>Easy to learn</p>
+  <p>No need for jQuery</p>
+  <p>No JavaScript library</p>
+  </div>
+</div>
+
+<div class="w3-third">
+  <div class="w3-card w3-container" style="min-height:460px">
+  <h3>Think</h3><br>
+  <i class="fa fa-diamond w3-margin-bottom w3-text-theme" style="font-size:120px"></i>
+  <p>Paper like design</p>
+  <p>Bold colors and shadows</p>
+  <p>Equal across platforms</p>
+  <p>Equal across devices</p>
+  </div>
+</div>
+</div>
+
+-->
+
 
 
 
@@ -451,7 +554,7 @@ h3 {
   
   
   
-  
+  <!--
 <style>
 
 
@@ -579,7 +682,7 @@ h3 {
   </form>
 </div>
   
-  
+  -->
   
   
   
@@ -806,10 +909,11 @@ function showSlides(n) {
 
 
 <footer class="container-fluid text-center">
-  <a href="#myPage" title="To Top" class="up-arrow" data-toggle="tooltip">
-    <span class="glyphicon glyphicon-chevron-up"></span>
-  </a>
-  <p>Made By  <a href="https://alexandroshub.github.io/welcome21.html" target="_blank"title="Visit AlexandrosHub">AlexandrosHub</a></p>
+ 
+  <p><i style='font-size:12px' class='fas'>&#xf121;</i> WITH <i style='font-size:12px' class='fas'>&#xf004;</i>
+
+ BY 
+  <a href="https://alexandroshub.github.io/welcome21.html" target="_blank"title="Visit AlexandrosHub"> ▞▚ ▛ </a></p>
   
   <p   style="font-size: 9px; color:#9CA5AC">
         <link
@@ -819,6 +923,8 @@ function showSlides(n) {
           crossorigin="anonymous"/>
         <i class="fa fa-creative-commons"></i>2021 AlexandrosHub CC-BY | <a href="https://alexandroshub.github.io/about">Privacy Statement & Terms of Use</a> | <a href="https://alexandroshub.github.io/contact">Contact</a></p>
 </footer>
+
+
  <!--
 ───╔╗──────────────╔╗────────╔╗────╔╗
 ───║║──────────────║║────────║║────║║
