--- a/Qindex.html
+++ b/Qindex.html
@@ -300,7 +300,9 @@ h3 {
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>                        
       </button>
-      <a class="navbar-brand" href="#myPage"><b>▞▚ ▛</b></a>
+   <a href="https://alexandroshub.github.io" class="active" id="home">
+      <img src="https://64.media.tumblr.com/3ef0a7c670508d24a5f81974d8711a9d/52d202ea8394f0a9-e3/s540x810/2aa917032808deaa115cee0b60aaf5a81ec9011e.png" style="width: 230px; " />
+      </a>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav navbar-right">
