--- a/Qindex.html
+++ b/Qindex.html
@@ -7,7 +7,7 @@
       ▞▚ ▙▄ ▛ █▬█ ▞▚  ▛ █ 
       
       
-      Updated: v2.1 20oct21
+      Updated: v2.1 20noe21
       Website: https://alexandroshub.github.io
       Contact: 	a-papaspyrou@outlook.com.gr
       CC-BY international 4 2011-2021 Alexandros Papaspyrou
@@ -686,6 +686,38 @@ function topFunction() {
   
   -->
   
+   
+<div id="grad1" style="background-color:powderblue; text-align:center;font-family:verdana;color:white;background-image: linear-gradient(to right, rgba(239,140,53),rgb(218,39,73), rgba(189,24,133));">
+
+<h1><br></h1>
+<style>
+
+butstem {
+    transition: all .5s ease;
+    color: #fff;
+    border: 3px solid white;
+    font-family:'Montserrat', sans-serif;
+    text-transform: uppercase;
+    text-align: center;
+    line-height: 1;
+    font-size: 17px;
+    background-color : transparent;
+    padding: 10px;
+    outline: none;
+    border-radius: 4px;
+}
+butstem:hover {
+    color: #001F3F;
+    background-color: #fff;
+}
+</style>
+
+  <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
+<butstem onclick="window.location.href='https://alexandroshub.github.io/stem'">STEAM</butstem>
+<br><br><h6>Science, Technology, Engineering, Art and Mathematics</h6>
+<br>
+</div>
+
   
   
   
