--- a/dev.html
+++ b/dev.html
@@ -188,6 +188,9 @@ ul.breadcrumb li a:hover {
      
    <img src="https://ih1.redbubble.net/image.270426643.3373/st,small,507x507-pad,600x600,f8f8f8.u4.jpg" alt="Paris" width="80" height="80">    
 
+	<br>
+	<button type="button" onclick="window.location.href='https://www.ni.com/en-us/support/downloads/software-products/download.labview.html#411240';">NI - labview </button>
+	<button type="button" onclick="window.location.href='https://www.ni.com/en-us/support/downloads/software-products/download.multisim.html#312060';">NI - multisim </button>
   
 <!--
 
